--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\""
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
